tests/should_fail/logic_alias/alias_in_logic_function.stderr
error: Only program functions can use `#[logic_alias]`
 --> alias_in_logic_function.rs:7:8
  |
6 | #[logic_alias(greater(a, b))]
  | ----------------------------- alias defined here
7 | pub fn greater_than(a: i64, b: i64) -> bool {
  |        ^^^^^^^^^^^^

error: aborting due to 1 previous error

